fix dark mode background for not found user

--- a/src/style.scss
+++ b/src/style.scss
@@ -118,6 +118,7 @@ $inputdark: #3a3f3f;
 
     .error {
         color: rgb(180, 129, 129);
+        background-color: $inputdark;
     }
 }
 
